...

    <TextView
        android:id="@+id/jobSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/jobTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/errorJSJobTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/errorJSCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <Spinner
        android:id="@+id/spinnerJobType"
        android:layout_width="165dp"
        android:layout_height="40dp"
...

    <TextView
        android:id="@+id/errorJSJobType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/requirementText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/errorJSRequirement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/errorJSSalary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <Spinner
        android:id="@+id/spinnerUrgency"
        android:layout_width="175dp"
        android:layout_height="42dp"
...

    <TextView
        android:id="@+id/errorJSUrgency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/locationJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/errorJSLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/expectedDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/errorJSDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <Button
        android:id="@+id/startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <Button
        android:id="@+id/jobSubmissionButton"
        android:layout_width="203dp"
        android:layout_height="43dp"
...
