...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeEmployee" />

    <Button
        android:id="@+id/myProfileButton"
        android:layout_width="286dp"
        android:layout_height="45dp"
        android:layout_marginTop="3dp"
        android:text="My Profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
